paths changed, openapi changed, user checking added
